[metadata]
name = probeCOCOATek
version = attr: probeCOCOATek.probeCOCOATek.__version__
url = https://github.com/rocaz/probeCOCOATek
author = ROCA
author_email = rocaznet@gmail.com
license = MIT
license_file = LICENSE
keywords = python python3 exposure-notification temporary-exposure-key cocoa cli cocoa-debugging
description = Probe TemporaryExposureKeys and Files of Exposure Notifications System in Japan a.k.a. COCOA.
long_description = file: README.rst
classifiers =
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: System Administrators
        License :: OSI Approved :: MIT License
        Natural Language :: English
        Programming Language :: Python
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Topic :: Utilities

[options]
zip_safe = False
packages = probeCOCOATek,probeCOCOATek.TemporaryExposureKey
python_requires = >= 3.7
setup_requires =
    setuptools
    cython
    pandas
    pytest-runner
tests_require =
    pytest
    pytest-cov
    pytest-mock
    requests-mock
install_requires =
    pytz
    protobuf
    python-dateutil
    requests
    urllib3
entry_points = file: entry_points.cfg

[options.packages.find]
where=probeCOCOATek.TemporaryExposureKey

[check-manifest]
ignore =
    .coverage
    .git
    .git/*
    .github
    .github/*
    .pytest_cache
    .pytest_cache/*
    __pycache__
    __pycache__/*
    coverage.xml
    htmlcov
    htmlcov/*
    .dependabot
    .dependabot/*
    .coveragerc
    CHANGELOG.rst
    CONTRIBUTING.md
    .travis.yml
    requirements*
    tox.ini
    .changes
    .changes/*
    tests
    tests/*
    scripts
    scripts/*
    doc
    doc/*